# sawtooth-lib

./: .dockerignore  .env  .gitignore  CODEOWNERS  Jenkinsfile  MAINTAINERS.md  README.md  RELEASE_NOTES.md  docker-compose-installed.yaml  justfile
.github/: settings.yml
docker/: lint  (+1 more)
libsawtooth/: Cargo.toml  RELEASE_NOTES.md  build.rs
libsawtooth/protos/: block.proto  block_info.proto  events.proto  identity.proto  setting.proto  transaction.proto  transaction_receipt.proto  validator.proto
libsawtooth/src/: batch.rs  hashlib.rs  lib.rs  protos.rs  receipt.rs  transaction.rs
libsawtooth/src/artifact/: artifact_creator.rs  artifact_store.rs  artifact_trait.rs  mod.rs
libsawtooth/src/client/: error.rs  mod.rs  rest.rs
libsawtooth/src/consensus/: notifier.rs
libsawtooth/src/error/: constraint_violation.rs  internal.rs  invalid_state.rs  mod.rs  unavailable.rs
libsawtooth/src/execution/: execution_platform.rs
libsawtooth/src/families/: xo.rs
libsawtooth/src/families/command/: handler.rs  transaction_builder.rs
libsawtooth/src/families/command/workload/: command_iter.rs  mod.rs
libsawtooth/src/families/sabre/: addressing.rs  handler.rs  mod.rs  payload.rs  state.rs
libsawtooth/src/families/sabre/admin/: allow_all.rs  mod.rs  settings.rs
libsawtooth/src/families/sabre/wasm_executor/: wasm_externals.rs  wasm_module.rs
libsawtooth/src/families/smallbank/: handler.rs
libsawtooth/src/families/smallbank/workload/: mod.rs  playlist.rs
libsawtooth/src/journal/: block_manager.rs  block_scheduler.rs  block_store.rs  block_validator.rs  block_wrapper.rs  candidate_block.rs  chain.rs  chain_commit_state.rs  chain_head_lock.rs  commit_store.rs  fork_cache.rs  mod.rs  publisher.rs  state_verifier.rs  validation_rule_enforcer.rs
libsawtooth/src/journal/genesis/: builder.rs  error.rs  mod.rs
libsawtooth/src/journal/publisher/: batch_pool.rs  builder.rs  chain_head_lock.rs  error.rs  mod.rs  pending_batch_queue.rs
libsawtooth/src/journal/publisher/batch_injector/: block_info.rs  default_factory.rs  mod.rs
libsawtooth/src/journal/publisher/batch_submitter/: error.rs  mod.rs
libsawtooth/src/migrations/: mod.rs
libsawtooth/src/migrations/diesel/: mod.rs
libsawtooth/src/migrations/diesel/postgres/: mod.rs
libsawtooth/src/migrations/diesel/postgres/migrations/2021-08-06-160400_receipt_store/: down.sql  up.sql
libsawtooth/src/migrations/diesel/postgres/migrations/2021-09-27-094150_receipt_store_service_id/: down.sql  up.sql
libsawtooth/src/migrations/diesel/postgres/migrations/2021-11-18-202559_fix_state_change_type/: down.sql  up.sql
libsawtooth/src/migrations/diesel/postgres/migrations/2022-01-27-103000_add_transaction_receipt_index/: down.sql  up.sql
libsawtooth/src/migrations/diesel/sqlite/: mod.rs
libsawtooth/src/migrations/diesel/sqlite/migrations/2021-08-04-163100_receipt_store/: up.sql
libsawtooth/src/migrations/diesel/sqlite/migrations/2021-09-27-094150_receipt_store_service_id/: down.sql  up.sql
libsawtooth/src/permissions/: error.rs  mod.rs  state_source.rs  verifier.rs
libsawtooth/src/protocol/: batch.rs  block.rs  block_info.rs  genesis.rs  identity.rs  mod.rs  setting.rs  transaction.rs
libsawtooth/src/publisher/: batch.rs  batch_verifier.rs  context.rs  factory.rs  handler.rs  message.rs  mod.rs  pending_batches.rs
libsawtooth/src/receipt/: mod.rs
libsawtooth/src/receipt/store/: error.rs  lmdb.rs  mod.rs
libsawtooth/src/receipt/store/diesel/: mod.rs  models.rs  schema.rs
libsawtooth/src/receipt/store/diesel/operations/: add_txn_receipts.rs  count_txn_receipts.rs  get_txn_receipt_by_id.rs  get_txn_receipt_by_index.rs  list_receipts_since.rs  mod.rs  remove_txn_receipt_by_id.rs  remove_txn_receipt_by_index.rs
libsawtooth/src/scheduler/: mod.rs
libsawtooth/src/signing/: error.rs  hash.rs  mod.rs
libsawtooth/src/state/: error.rs  identity_view.rs  merkle.rs  settings_view.rs  state_pruning_manager.rs  state_view_factory.rs
libsawtooth/src/store/: btree.rs  error.rs  lmdb.rs  mod.rs  pool.rs
libsawtooth/src/store/receipt_store/: mod.rs
libsawtooth/src/transact/: mod.rs  sawtooth.rs
libsawtooth/src/transact/context/: error.rs  mod.rs
libsawtooth/src/transact/context/manager/: mod.rs  sync.rs
libsawtooth/src/transact/contract/: mod.rs
libsawtooth/src/transact/contract/address/: double_key_hash.rs  key_hash.rs  mod.rs  triple_key_hash.rs
libsawtooth/src/transact/contract/archive/: mod.rs
libsawtooth/src/transact/contract/context/: error.rs  key_value.rs  mod.rs
libsawtooth/src/transact/database/: btree.rs  lmdb.rs  mod.rs
libsawtooth/src/transact/execution/: mod.rs
libsawtooth/src/transact/execution/adapter/: error.rs  mod.rs  static_adapter.rs  test_adapter.rs
libsawtooth/src/transact/execution/executor/: internal.rs  mod.rs  reader.rs
libsawtooth/src/transact/handler/: mod.rs
libsawtooth/src/transact/protocol/: batch.rs  mod.rs  receipt.rs  transaction.rs
libsawtooth/src/transact/protocol/sabre/: payload.rs
libsawtooth/src/transact/scheduler/: mod.rs
libsawtooth/src/transact/scheduler/multi/: core.rs  mod.rs  shared.rs
libsawtooth/src/transact/scheduler/serial/: core.rs  execution.rs  mod.rs  shared.rs
libsawtooth/src/transact/state/: mod.rs
libsawtooth/src/transact/state/merkle/: mod.rs
libsawtooth/src/transact/state/merkle/kv/: error.rs  mod.rs
libsawtooth/src/transact/state/merkle/kv/state_trait_impls/: committer.rs  dry_run_committer.rs  mod.rs  pruner.rs  reader.rs
libsawtooth/src/transact/state/merkle/sql/: mod.rs  postgres.rs  sqlite.rs
libsawtooth/src/transact/state/merkle/sql/backend/: mod.rs  postgres.rs  sqlite.rs
libsawtooth/src/transact/state/merkle/sql/store/: mod.rs  postgres.rs  sqlite.rs
libsawtooth/src/transact/workload/: batch_gen.rs  error.rs  mod.rs  runner.rs
libsawtooth/src/transact/workload/batch_reader/: mod.rs  protobuf.rs
libsawtooth/src/transact/workload/transaction_reader/: mod.rs  protobuf.rs
libsawtooth/tests/state/: mod.rs
libsawtooth/tests/state/merkle/: btree.rs  lmdb.rs  mod.rs  sql_postgres.rs  sql_sqlite.rs
(+42 files in other folders)
