# Copyright 2019 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "sawtooth"
version = "0.6.8"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
readme = "../README.md"
description = """\
    Hyperledger Sawtooth is an enterprise blockchain platform for building \
    distributed ledger applications and networks.
"""

[dependencies]
base64 = { version = "0.13", optional = true }
cbor-codec = { version = "0.7", optional = true }
cylinder = "0.2"
diesel = { version = "1.0", features = ["r2d2", "serde_json"], optional = true }
diesel_migrations = { version = "1.4", optional = true }
hex = "0.4"
log = "0.4"
lmdb-zero = { version = "0.4", optional = true }
metrics = { version = "0.12", features = ["std"], optional = true }
protobuf = "2.23"
reqwest = { version = "0.11", optional = true, features = ["blocking", "json"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
sha2 = { version = "0.9", optional = true }
transact = "0.3"
uluru = { version = "0.4", optional = true }

[dev-dependencies]
rand = "0.8"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.3"

[features]
default = []

stable = [
    "lmdb",
    "postgres",
    "sqlite",
    "transaction-receipt-store",
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
    "client",
    "client-rest",
    "pending-batch-queue",
    "validator-internals",
]

client = []
client-rest = ["base64", "client", "reqwest", "serde"]
lmdb = ["lmdb-zero"]
pending-batch-queue = ["validator-internals"]
postgres = ["diesel/postgres", "diesel_migrations"]
sqlite = ["diesel/sqlite", "diesel_migrations"]
transaction-receipt-store = []
validator-internals = [
  "cbor-codec",
  "lmdb-zero",
  "metrics",
  "sha2",
  "uluru",
]

[package.metadata.docs.rs]
features = [
    "stable",
    "experimental"
]
